2001-12-20  matthew green  <mrg@redhat.com>

	* config/tc-ppc.c (md_parse_option): Make -maltivec default
	to generating PowerPC instructions.

2001-12-20  Jason Thorpe  <thorpej@wasabisystems.com>

	* configure.in (mips-dec-netbsd*): Delete.
	* configure: Regenerate.

	* configure.in (arm-*-netbsdelf*): Add target.
	* configure: Regenerate.

2001-12-18  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-mips.h (TC_HANDLE_FX_DONE): Remove redundant
	definition. 

2001-12-18  Niibe Yutaka  <gniibe@m17n.org>

	* configure.in (assign object format): Bug fix for setting
	endian.
	* configure: Regenerate.

2001-12-18  matthew green  <mrg@eterna.com.au>

	* configure.in (m68k-*-netbsdelf*): New target.
	(m68k-*-netbsd*): Also include ELF support.
	(m68k-*-netbsdaout*): New alias for m68*-*-netbsd*.
	* configure: Regenerate.

2001-12-18  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* gasp.c (main): Protoype.

2001-12-17  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (alpha_handle_align): Encode unop with RB as $sp.

2001-12-17  Nick Clifton  <nickc@cambridge.redhat.com>

	* cgen.c: Add prototype for queue_fixup.
	(gas_cgen_parse_operand): Move initilisastion of errmsg to avoid
	possible longjmp corruption.
	* cgen.h: Add prototype for gas_cgen_md_operand.

2001-12-15  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-elf.c (obj_elf_init_stab_section): References are
	kept to section name strings.  Don't alloca them!

2001-12-12  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-d10v.c (get_operands): Mark OPERAND_PLUS after
	OPERAND_ATSIGN as O_absent.

2001-12-07  Geoffrey Keating  <geoffk@redhat.com>
	    Richard Henderson  <rth@redhat.com>

	* configure.in: Add support for xstormy16.
	* configure: Regenerated.
	* Makefile.am: Add support for xstormy16.
	* Makefile.in: Regenerated.
	* config/tc-xstormy16.c: New file.
	* config/tc-xstormy16.h: New file.

2001-12-06  Richard Earnshaw (rearnsha@arm.com)
